Add GitHub link

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 
         <br><br>
         <em>Data based on <a href="https://www.serebii.net/ultrasunultramoon/ultrawormholes.shtml" target="_blank">Serebii</a></em>
+        <br>
+        <em>Code available at <a href="https://github.com/Fleker/ultra-wormhole-calculator" target="_blank">GitHub</a></em>
 
         <script src="main.js"></script>
     </body>
